{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 55,
  "lineage": "7d442d50-0d18-5d7b-6278-4ae7793bce75",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "foo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0015b9ef68c77328d",
            "arn": "arn:aws:ec2:us-east-1:404786016769:instance/i-0932cd8c58e8bb9ed",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0932cd8c58e8bb9ed",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cf4ed24364e2d113",
            "private_dns": "ip-10-0-1-253.ec2.internal",
            "private_ip": "10.0.1.253",
            "public_ip": "34.207.222.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:404786016769:key/9f0b1306-0e97-457e-8832-1955d45c89b3",
                "volume_id": "vol-06b6037e8516b7e12",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0bef672f1a29ccd93"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d30c932187525c25",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0bef672f1a29ccd93"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.sc",
            "aws_subnet.local",
            "aws_vpc.local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0552272de7e48071e",
            "owner_id": "404786016769",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-01bde1c7c1e3b26ae"
          },
          "dependencies": [
            "aws_vpc.local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04f8898dc476c0431",
            "owner_id": "404786016769",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0552272de7e48071e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-01bde1c7c1e3b26ae"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3cba4f02e11032a",
            "route_table_id": "rtb-04f8898dc476c0431",
            "subnet_id": "subnet-0d30c932187525c25"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route",
            "aws_subnet.local",
            "aws_vpc.local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:404786016769:security-group/sg-0bef672f1a29ccd93",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bef672f1a29ccd93",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "apache port number 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_tls",
            "name_prefix": null,
            "owner_id": "404786016769",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bde1c7c1e3b26ae"
          },
          "dependencies": [
            "aws_vpc.local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "local",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:404786016769:subnet/subnet-0d30c932187525c25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0d30c932187525c25",
            "map_public_ip_on_launch": true,
            "owner_id": "404786016769",
            "tags": {
              "Name": "Main"
            },
            "vpc_id": "vpc-01bde1c7c1e3b26ae"
          },
          "dependencies": [
            "aws_vpc.local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "local",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:404786016769:vpc/vpc-01bde1c7c1e3b26ae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-086f00f4ef266753b",
            "default_route_table_id": "rtb-0d8bb9176a46795f3",
            "default_security_group_id": "sg-05db44feabd763d5d",
            "dhcp_options_id": "dopt-060a2022a1844781d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01bde1c7c1e3b26ae",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d8bb9176a46795f3",
            "owner_id": "404786016769",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}